--- a/ThermoFluids/templates/ThermoFluids/TestView.html
+++ b/ThermoFluids/templates/ThermoFluids/TestView.html
@@ -1,88 +1,46 @@
-{% extends "Base.html" %}
 {% load bootstrap_toolkit %}
 {% load staticfiles %}
 
-{% block scripts_and_styles %}
-<script src="{% static 'SmoUtil.js' %}"></script>
-<script src="{% static 'smo-datatable/smo.datatable.js' %}"></script>
-<link rel="stylesheet" type="text/css" href="{% static 'smo-datatable/smo.datatable.css' %}">
+<script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+<style>
+.chart rect {
+  fill: blue;
+}
+
+.chart text {
+  fill: white;
+  font: 10px sans-serif;
+  text-anchor: end;
+}
+</style>
+<svg class="chart"></svg>
 <script>
-angular.module('testApp', ['ui.bootstrap', 'smo'])
-	.controller('testController', [ '$scope', '$http', '$window', 'units', function($scope, $http, $window, units) {
-	$scope.setupOptions = {
-		stateVariable : [{name : 'pressure', value : 'P', unit : 'Pa'}, 
-                        {name : 'temperature', value : 'T', unit : 'K'},
-						{name : 'density', value : 'D', unit : 'kg/m**3'},
-						{name : 'specific enthalpy', value : 'H', unit : 'J/kg' },
-						{name : 'specific inner energy', value : 'U', unit : 'J/kg'},
-						{name : 'specific entropy', value : 'S', unit : 'J/kg-K' },
-						{name : 'vapor quality', value : 'Q', unit : ''}],
-		variability : [{name : 'vary', value : 'range'}, 
-		                      {name : 'be', value : 'fixed'}],
-		step : [{name : 'by ', value : 'step'}, 
-               {name : 'in', value : 'numSteps'}]
-	};
-	$scope.setup = {};
-	$scope.generate = function() {
-		alert(angular.toJson($scope.setup, true));
-	}
-	$scope.dumpObj = function(obj) {
-		return angular.toJson(obj, true)
-	}	
+var data = [4, 8, 15, 16, 23, 42];
+var width = 420,
+barHeight = 20;
 
-	$scope.units = units;
-	$scope.v1 = new units.Quantity('Temperature', 0, 'degC');
-	$scope.v2 = new units.Quantity('Pressure', 3e5, 'bar');
-	$scope.v3 = new units.Quantity('Length', 7, 'mm');
+var x = d3.scale.linear()
+	.domain([0, d3.max(data)])
+	.range([0, width]);
 
-}])
-</script>
-{% endblock %}
-{% block content %}
-	{% verbatim %}
-	<div ng-app="testApp" ng-controller="testController">
-		<div>			
-			State Variable 1: <select ng-model="setup.stateVariable" ng-options="stateVar.name for stateVar in setupOptions.stateVariable" ng-required="true"></select><br>
-			<select ng-model="setup.stateVarVariability" ng-options="variability.name for variability in setupOptions.variability"></select>
-			<span ng-switch  on="setup.stateVarVariability.value"> 
-				<span ng-switch-when="fixed"> <input type="number" ng-model="setup.value">{{setup.stateVariable.unit}}</span>
-				<span ng-switch-when="range"> between  <input type="number" ng-model="setup.stateVarMin">{{setup.stateVariable.unit}} 
-					and <input type="number" ng-model="setup.stateVarMax"> {{setup.stateVariable.unit}}<br>
-					<select ng-model="setup.stepType" ng-options="stepOpt.name for stepOpt in setupOptions.step"></select>
-					<span ng-switch  on="setup.stepType.value">
-						<span ng-switch-when="step"> <input type="number" ng-model="setup.step">{{setup.stateVariable.unit}}</span>
-						<span ng-switch-when="numSteps"> <input type="number" ng-model="setup.numSteps"> steps</span>				
-					</span> 					
-				</span>
-			</span>			
-		</div>
-		<button ng-click="generate()">Generate</button>
-		<br>
-		<br>
-		<div>			
-			State Variable 2: <select ng-model="setup.stateVariable" ng-options="stateVar.name for stateVar in setupOptions.stateVariable" ng-required="true"></select><br>
-			<select ng-model="setup.stateVarVariability" ng-options="variability.name for variability in setupOptions.variability"></select>
-			<span ng-switch  on="setup.stateVarVariability.value"> 
-				<span ng-switch-when="fixed"> <input type="number" ng-model="setup.value">{{setup.stateVariable.unit}}</span>
-				<span ng-switch-when="range"> between  <input type="number" ng-model="setup.stateVarMin">{{setup.stateVariable.unit}} 
-					and <input type="number" ng-model="setup.stateVarMax"> {{setup.stateVariable.unit}}<br>
-					<select ng-model="setup.stepType" ng-options="stepOpt.name for stepOpt in setupOptions.step"></select>
-					<span ng-switch  on="setup.stepType.value">
-						<span ng-switch-when="step"> <input type="number" ng-model="setup.step">{{setup.stateVariable.unit}}</span>
-						<span ng-switch-when="numSteps"> <input type="number" ng-model="setup.numSteps"> steps</span>				
-					</span> 					
-				</span>
-			</span>			
-		</div>
-		<button ng-click="generate()">Generate</button>
-		<br>
-		<br>
-		<input type="number" step="any" ng-init='v1.changeUnit()' ng-model='v1.displayValue' ng-change='v1.updateQuantity()'>
-		<select ng-model='v1.displayUnit' ng-options='name as name for (name, conv) in units.quantities[v1.quantity].units' ng-change='v1.changeUnit()'></select>
-		<div ng-bind='dumpObj(v1)'></div>
-		<p>Test here</p>
-		<smo-input-quantity smo-quantity-var="v3"></smo-input-quantity>
-		<div ng-bind='dumpObj(v3)'></div>
-	</div>
-	{% endverbatim %}
-{% endblock %}
+var chart = d3.select(".chart")
+	.attr("width", width)
+	.attr("height", barHeight * data.length);
+
+var bar = chart.selectAll("g")
+	.data(data)
+	.enter().append("g")
+	.attr("transform", function(d, i) { return "translate(0," + i * barHeight + ")"; });
+
+bar.append("rect")
+	.attr("width", x)
+	.attr("height", barHeight - 1);
+
+bar.append("text")
+	.attr("x", function(d) { return x(d) - 3; })
+	.attr("y", barHeight / 2)
+	.attr("dy", ".35em")
+	.text(function(d) { return d; });
+</script> 
+
+
