--- a/DataManagement/templates/DataManagement/TestView.html
+++ b/DataManagement/templates/DataManagement/TestView.html
@@ -3,41 +3,45 @@
 {% load staticfiles %}
 
 {% block scripts_and_styles %}
-<script src="{% static 'smo-datatable/smo.datatable-test.js' %}"></script>
-<link rel="stylesheet" type="text/css" href="{% static 'smo-datatable/smo.datatable.css' %}">
 <script src="{% static 'smo-treeview/smo.treeview-test.js' %}"></script>
 <link rel="stylesheet" type="text/css" href="{% static 'smo-treeview/smo.treeview.css' %}">
 <!--Load the AJAX API-->
 <script type="text/javascript" src="https://www.google.com/jsapi"></script>
-<!-- <script src='https://www.google.com/jsapi?autoload={"modules":[{"name":"visualization","version":"1","packages":["corechart","table", "controls"]}]}'></script> -->
 <script type="text/javascript" src="http://dygraphs.com/dygraph-dev.js"></script>
-<script src="{% static 'smo-datatable/tablequerywrapper.js' %}"></script>
+
 
 
 <script>
 	google.load('visualization', '1.0', {'packages':["corechart", "table", "controls"]}); 
-	angular.module('testApp', ['ui.bootstrap', 'smoDataTableModule', 'angularTreeview'])
+	angular.module('testApp', ['ui.bootstrap', 'angularTreeview'])
 	.controller('testController', [ '$scope', '$http', '$window', function($scope, $http, $window) {
 		$scope.tableLoaded = false;
+		$scope.dsetName = "";
 		
 		$scope.initTable = function(){
 			$scope.allChecked = true;
 			$scope.columnsShow = [];
 			$scope.tableArray = [];
+			$scope.visibilityArray = [];
+			$scope.timesZoomed = 0;
+			$scope.ZoomedValuesArray = [];
+			
 			var columnNames = [];
 			for (i=0; i<$scope.columnTable.columns.length; i++){
 				columnNames.push($scope.columnTable.columns[i].name);
 				$scope.columnsShow[i] = true;
+				$scope.visibilityArray.push(true);
 			}
+			
 			$scope.tableArray.push(columnNames);
 			for (i=0; i<$scope.columnTable.data.length; i++){
-				$scope.tableArray.push($scope.columnTable.data[i]);
+				$scope.tableArray.push($scope.columnTable.data[i]);				
 			}
 			$scope.data = google.visualization.arrayToDataTable($scope.tableArray);
-			var formatter = new google.visualization.NumberFormat({pattern: '###.###'});
-			for (i=0; i<$scope.columnTable.columns.length; i++){
-				formatter.format($scope.data, i);
-			}
+// 			var formatter = new google.visualization.NumberFormat({pattern: '###.###'});
+// 			for (i=0; i<$scope.columnTable.columns.length; i++){
+// 				formatter.format($scope.data, i);
+// 			}
 			$scope.view = new google.visualization.DataView($scope.data);
 		}
 		
@@ -56,33 +60,99 @@
 				$scope.columnsShow[i] = $scope.allChecked;
 			}
 			$scope.setView();
+			$scope.drawView();
 		}
 		
 		$scope.update = function(){
 			$scope.allChecked = false;
 			$scope.setView();
+			$scope.drawView();
 		}
 		
-		$scope.drawTable = function (){						
-			var table = new google.visualization.Table(document.getElementById('table_div'));
-			table.draw($scope.data, {showRowNumber: true, sort:'disable', page:'enable', pageSize:20});			
-		}
+// 		$scope.drawTable = function (){						
+// 			var table = new google.visualization.Table(document.getElementById('table_div'));
+// 			table.draw($scope.data, {showRowNumber: true, sort:'disable', page:'enable', pageSize:20});			
+// 		}
 		
 		$scope.drawView = function (){
 			var tableView = new google.visualization.Table(document.getElementById('view_div'));
 			tableView.draw($scope.view, {showRowNumber: true, sort:'disable', page:'enable', pageSize:20});
 		}
 		
+// 		$scope.zoomBack = function(){
+// 			var prevZoomedValues = $scope.ZoomedValuesArray.pop();
+// 			$scope.chart1.updateOptions({
+// 		          dateWindow: [prevZoomedValues[0], prevZoomedValues[1]],
+// 		          valueRange: [prevZoomedValues[2], prevZoomedValues[3]]
+// 		        });
+// 			$scope.timesZoomed -= 1;
+// 			$scope.plotData();
+// 		}
+		
+		$scope.chart1 = new Dygraph.GVizChart(
+				document.getElementById('dygraphs'));
+		
+// 		$scope.clearGraph = function(context, area, chart){
+// 			if (typeof(g) == 'undefined') return;
+// 			chart.updateOptions({});
+// 		}
+		
 		$scope.plotData = function(){
-			var chart1 = new Dygraph.GVizChart(
-			document.getElementById('dygraphs')).draw($scope.view, {
+			$scope.chart1.draw($scope.view, {
 				labelsDiv: 'dylegend',
 				labelsDivWidth: 150,
 				labelsSeparateLines: true,
 				width: 900,
-				height: 500
+				height: 500,
+				title: $scope.dsetName,
+				visibility: $scope.visibilityArray,
+// 				underlayCallback: $scope.clearGraph,
+				drawCallback: function(chart, initial) {
+					if (!$scope.timesZoomed && chart){
+						
+						$scope.chart = chart;
+						$scope.ZoomedValuesArray = [];
+				      var minDate = chart.xAxisRange()[0];
+				      var maxDate = chart.xAxisRange()[1];
+				      var minValue = chart.yAxisRange()[0];
+				      var maxValue = chart.yAxisRange()[1];
+				      $scope.ZoomedValuesArray.push(minDate, maxDate, minValue, maxValue);
+				      console.log($scope.ZoomedValuesArray);
+					}					
+	            },
+				zoomCallback: function(minDate, maxDate, valueRange) {
+					console.log(minDate, maxDate, valueRange);
+				
+					$scope.ZoomedValuesArray.push(minDate, maxDate, valueRange[0], valueRange[1]);
+					$scope.timesZoomed += 1;
+		        },
+	            clickCallback: function(e, x, points){
+	            	if($scope.timesZoomed == 0) return;
+	            	var prevZoomedValues = $scope.ZoomedValuesArray.pop();
+	            	console.log(prevZoomedValues);
+	            	$scope.chart.updateOptions({
+	    		          dateWindow: [prevZoomedValues[0], prevZoomedValues[1]],
+	    		          valueRange: [prevZoomedValues[2], prevZoomedValues[3]]
+	    		        });
+	    			$scope.timesZoomed -= 1;
+	            }
 			});
-		}
+			
+// 			$scope.chart1.setVisibility($scope.visibilityArray);
+			
+// 			if (!$scope.timesZoomed && $scope.chart1){
+// 				// Pull an initial value for logging.
+// 				var chart = $scope.chart1;
+// 				 console.log($scope.chart1);
+// 				 console.log("xAxisRange: "+ chart.xAxisRange());
+// 			      var minDate = $scope.chart1.xAxisRange()[0];
+// 			      var maxDate = $scope.chart1.xAxisRange()[1];
+// 			      var minValue = $scope.chart1.yAxisRange()[0];
+// 			      var maxValue = $scope.chart1.yAxisRange()[1];
+// 			      $scope.ZoomedValuesArray.push(minDate, maxDate, minValue, maxValue);
+			}
+			
+		
 	}]);
 </script>
 {% endblock %}
@@ -93,9 +163,8 @@
 		<!-- Nav tabs -->
 		<ul class="nav nav-tabs" role="tablist" id="myTab">
 		  <li class="active"><a data-target="#tree" role="tab" data-toggle="tab">Explorer</a></li>
-		  <li ng-show="tableLoaded" ><a data-target="#table" role="tab" data-toggle="tab" ng-click="drawTable()">Overview</a></li>
-		  <li ng-show="tableLoaded" ><a data-target="#view" role="tab" data-toggle="tab" ng-click="drawView()">Table</a></li>
 		  <li ng-show="tableLoaded" ><a data-target="#plot" role="tab" data-toggle="tab" ng-click="plotData()">Plot</a></li>
+		  <li ng-show="tableLoaded" ><a data-target="#view" role="tab" data-toggle="tab" ng-click="drawView()">Table</a></li>
 		</ul>
 
 		<!-- Tab panes -->
@@ -106,32 +175,41 @@
 			  	<br>
 			  	<smo-hdf-browser tree-id="hdfView"></smo-hdf-browser>
 		  </div>
-		  <div class="tab-pane" id="table">
-		  	<div>Select columns to display:</div>
-		  	<div>
-				<input type="checkbox" ng-model="allChecked" ng-change="setToAll()"></input>
-				<span>Check all</span>
-			</div>
-  			<div style="width: 70%;">		  				
-				<div style="display:inline-block;" ng-repeat="columnName in tableArray[0] track by $index">
-					<input type="checkbox" ng-model="columnsShow[$index]" ng-change="update()"></input>
-					<span ng-bind="columnName"></span>
-					&nbsp&nbsp&nbsp&nbsp&nbsp
-	    		</div>
-	    	</div>		  	
-			<div id="table_div"></div>			
+		  <div class="tab-pane" id="plot">
+			  <table>
+			  	<tr>
+			  		<td>  				
+							<div style="display:inline-block;" ng-repeat="columnName in tableArray[0].slice(1) track by $index">
+								<input type="checkbox" ng-model="visibilityArray[$index]" ng-change="plotData()"></input>
+								<span ng-bind="columnName"></span>
+								&nbsp&nbsp&nbsp&nbsp&nbsp
+							</div>	
+			  		</td>
+			  	</tr>
+			  	<tr>
+			  		<td><div id="dygraphs" style="display:inline-block;"></div></td>
+			  		<td>
+			  			<div id="dylegend" style="display:inline-block; vertical-align:text-top;"></div>			  		
+			  		</td>
+			  	</tr>
+			  </table>
 		  </div>
 		  <div class="tab-pane" id="view">
-		  		<div id="view_div"></div>	
-		  </div>
-		  <div class="tab-pane" id="plot">
-		  <table>
-		  <tr>
-			  	<td><div id="dygraphs" style="display:inline-block;"></div></td>
-			  	<td><div id="dylegend" style="display:inline-block; vertical-align:text-top;"></div></td>
-			  </tr>
-			</table>
-		  </div>
+		  		<div ng-bind="dsetName" style="font-weight: bold; font-size: large;"></div>
+		  	 	<div>Select columns to display:</div>
+					<div>
+						<input type="checkbox" ng-model="allChecked" ng-change="setToAll()"></input>
+						<span>Check all</span>
+					</div>
+				<div style="width: 70%;">		  				
+					<div style="display:inline-block;" ng-repeat="columnName in tableArray[0] track by $index">
+						<input type="checkbox" ng-model="columnsShow[$index]" ng-change="update()"></input>
+						<span ng-bind="columnName"></span>
+						&nbsp&nbsp&nbsp&nbsp&nbsp
+					</div>
+				</div>				  
+				<div id="view_div"></div>	
+		 </div>
 		</div>
 	</div>
 </div>
